Modified routes, controller and odm for users
